# StudiOS

./: .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.user.shared  LICENSE  STRUCTURE  c-ide-app.apparmor  index.html  manifest.json.in  pocket-desktop  sdk  sdk-libs  sdk-libs-dev  sdk-libs-tools  touch  touch-android  touch-android9plus  touch-core  touch-core-android9plus  touch-core-hybris  touch-core-mainline  touch-hybris  touch-mainline  update-meta-repo.sh  update.cfg
BasicAPP/: CMakeLists.txt  iconchanger.cpp  iconchanger.h  main.cpp  resources.qrc
BasicAPP/qml/: main.qml
c-ide-app/: CMakeLists.txt.user.1ddf73f  README.md  c-ide-app.desktop.in
c-ide-app/po/: c-ide-app.yourname.pot
c-ide-app/qml/: Main.qml
c-ide-app/src/: example.py
debian/: changelog  control  rules
po/: c-ide-app.yourname.pot
qml/: Main.qml
seeds/ubuntu-touch.xenial/: sdk-libs  sdk-libs-dev  sdk-libs-tools  touch  touch-android  touch-core
src/: example.py
ubuntu-touch.xenial/: pocket-desktop  sdk  sdk-libs  sdk-libs-dev  touch  touch-android  touch-core  touch-tests
